--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1843,16 +1843,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "29.826861436870264"
+       "29"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1861,7 @@
     "X_given=pd.DataFrame({'Category':['Alkoholunfälle'],'Type':['insgesamt'],'Year':2021,'Month':1})\n",
     "X_given=preprocessor.transform(X_given)\n",
     "X_final_pred=ensemble_model.predict(X_given)\n",
-    "X_final_pred[0] #prediction on given features values"
+    "int(X_final_pred[0]) #prediction on given features values,also convert it to integer since it has to be whole number"
    ]
   }
  ],
